# coalPIP

./: .gitignore  CMakeLists.txt
analytical/: steady_base.py  structure.py
analytical/steady/: model.py  model_frame.py
analytical_problem/: base_math.py  factors.py
analytical_steady/: base.py  model.py  model_frame.py  structure.py
config/: config.ini
cpp2numpy_demo/: functions.cpp  functions.h  script.py  wrapper.cpp
cpp2p_demo/: script.py
input/: config.py  parameters.py  parameters_frame.py  plot_parameters.py  properties.py  props.py  script_for_some.py  structure.py
latex/: math_models.tex
leastsq/: Some.cpp  Some.h  SomeWrapper.cpp
math_models/: math_models.tex
models/: .gitignore  models.tex
numerical/: Props.cpp  Props.h  Solver.cpp  Solver.h  SolverWrapper.cpp  __init__.py  cfd_test.py  convective.py  convective_math.py  frame.py  local.py  local_frame.py  local_math.py  math_frame.py  script.py  steady_eq.py  steady_eq_frame.py  transient_eq.py  transient_eq_frame.py  wrapper.cpp
numerical/equation/: Equation.cpp  Equation.h  Steady.cpp  Steady.h  Transient.cpp  Transient.h  equation.py  steady.py  transient.py
numerical/math/: Convective.cpp  Convective.h  General.cpp  General.h  Local.cpp  Local.h  Props.cpp  convective.py  general.py  local.py
numerical/utilities/: PythonConversions.h
optimization/: demo_empirical_risk.py  demo_optimization.py  empirical_risk.py  steady_analytical.py  steady_scipy.py
optimization/demo/: demo_empirical_risk.py
optimization/steady/: analytical_analytical.py  analytical_scipy.py
optimization/transient/: numerical_scipy.py
optimize/: demo.py
output/: .gitignore  __init__.py  optimized_sample_form.py  perm.txt  plot_optimized_sample.py  plot_steady_result.py
p_numerical/equation/: equation.py  steady.py  transient.py
p_numerical/math/: convective.py  general.py  local.py
settings/: settings.ini
steady_analytical/: base.py  base_frame.py  leastsq_linear.py
steady_analytical_math/: base.py  base_frame.py
